fib-calculator/k8s/server-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata: 
  name: server-deployment
  namespace: superapp
spec:
  selector:
    matchLabels:
      component: server
  replicas: 1
  template:
    metadata:
      labels:
        component: server
    spec:
      serviceAccountName: serversa
      volumes:
        - name: secrets-mount
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: pgpasswordspc
      containers:
        - name: server
          image: crsuperappkyrsq6m7kijni.azurecr.io/server:v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 75m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: secrets-mount
            mountPath: "/mnt/secrets-store"
            readOnly: true
