fib-calculator/k8s/worker-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: worker-deployment
  namespace: superapp

spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      serviceAccountName: workersa
      containers:
        - name: worker
          resources:
            requests:
              cpu: 30m
              memory: 128Mi
            limits:
              cpu: 60m
              memory: 256Mi
          image: crsuperappkyrsq6m7kijni.azurecr.io/worker:v1
